--- a/csharp/Assignment/Assignment_3/Assignment_3/Assignment_3/Assignment_3.csproj
+++ b/csharp/Assignment/Assignment_3/Assignment_3/Assignment_3/Assignment_3.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Assignment_3.Question5</StartupObject>
+    <StartupObject>Assignment_3.Qa5</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,10 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BankAccount.cs" />
     <Compile Include="Class1.cs" />
-    <Compile Include="doctor.cs" />
+    <Compile Include="Doctor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schlorship.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
