--- a/csharp/code_assessment/Assessment_3/Assessment_3/Assessment_3/Assessment_3.csproj
+++ b/csharp/code_assessment/Assessment_3/Assessment_3/Assessment_3/Assessment_3.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Assessment_3.Arthimatic_op</StartupObject>
+    <StartupObject>Assessment_3.Append</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
